--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,70 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
-*{
-  font-family: 'Quicksand', sans-serif;
-  margin:0;
-
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+* {
+  font-family: "Quicksand", sans-serif;
+  margin: 0;
+  font-weight: normal;
+ 
 }
-.Navbar{
-  display:flex;
-  flex-direction:column;
-  padding:20px;
-  align-items:center;
-  justify-content:center;
-  margin:0 auto;
-  border-bottom: 1px solid #f2f2f2;
-  max-width:600px;
-  
-  
+.body{
+  text-align: center;
+   background-image: url("./images/star-bg.jpg");
+  background-size: cover;
+  background-repeat:no-repeat;
+  height : 100vh;
 }
-.navbar h1{
-  color:Purple;
-  font-weight:bold;
-
+.navbar {
+  display: flex;
+  padding: 20px;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+  font-size: 17px;
+  border-box:2px solid black;
+  /* background: pink; */
+  /* box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px; */
+  box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset; 
 }
-.navbar .link{
-  
-  margin-left:auto;
-  color:rgb(216, 71, 95);
-  
+.navbar h1 {
+  color: Purple;
+  font-weight: bold;
 }
-
-.navbar a{
-  margin-left:16px;
-  text-decoration:none;
-  padding:6px;
-
-}
-.navbar a:hover{
-  color:rgb(26, 249, 26)
+.navbar .link {
+  margin-left: auto;
+  /* color: rgb(216, 71, 95); */
 }
 
-.about{
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  margin:25px;
-  padding:15px;
-  color:red;
-  border-radius:5px;
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover {
+  color: rgb(26, 249, 26);
 }
 
-.aboutnav{
-  display:flex;
-  flex-direction:row;
-  align-items:center;
-  justify-content:space-between;
-  padding:20px;
-  
+.about {
+  display: flex;
+  /* flex-direction:column; */
+  align-items: center;
+  margin: 25px;
+  padding: 15px;
+  color: red;
+  border-radius: 5px;
 }
-.homepage{
-  text-align:center;
-  font-size:24px;
-  margin:12 12 12 12
-  
+
+.aboutnav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
 }
-.card{
-  margin:6 4;
-  padding:5 2;
+.homepage {
+  text-align: center;
+  font-size: 24px;
+  margin: 12 12 12 12;
+}
+.card {
+  margin: 6 4;
+  padding: 5 2;
 }
